$Id$

version ? (????-??-??):

  - fixed new item addition in Cash Receipt Edit (alec)

version 1.8.0rc3 Rosha (2005-12-22):

  - BTS#0000490: documentation: fixed pg_dump options (alec)
  - added some options description in configlist module (alec)
  - fixed reload when using reload_execcmd and reload_sqlquery with hosts (alec)
  - fixed 'TO' calculation when using Stats -> Filter (alec) 
  - bugfix in perl scripts for 64-bit architectures (Jarek Dziubek)
  - BTS#0000495: fixed "Invalid argument..." error in liability report (alec)
  - fixed html invoice pagetitle (alec)
  - added flush()'es in genfake module (alec)
  - fixed Cash Receipt List filtering by value (alec)
  - fixed 'Check All' option on Cash Receipt List (alec)
  - fixed function DocumentExists(): added numbering plan checking (alec)
  - fixed problem with -0,00 on customer balance list (alec)
  - fixed error triggers in netadd and netedit (alec)
  - fixed network size checking in network edition (alec)
  - fixed warning in NetworkCompress() function (alec)

version 1.8.0rc2 Rosha (2005-12-12):

  - BTS#0000488: fixed title on nodes list printout (alec)
  - BTS#0000487: fixed printing from Invoices List (alec)
  - BTS#0000486: added duplicate and fixed invoices printing in
    Finance -> Print -> Invoices (alec)
  - added submit button in genfake interface (alec)
  - fixed solid payments accounting (alec)
  - fixed Liabilities Report: disposable and tariffless liabilities
    support, suspension and discount support, fixed sorting by value (alec)

version 1.8.0rc1 Rosha (2005-12-07):

  - BTS#0000216: now user with 'customers management' or 'nodes management'
    access don't need 'read only' access right (alec)
  - contrib/lms-debtors: added MySQL support (alec)
  - fixed traffic stats values in node informations (alec)
  - added link to customer stats in customer info page (alec)
  - BTS#0000471: fixed 'Tickets' link in customerinfo box (alec)