@@ -3,6 +3,7 @@ $Id$
 version ? (????-??-??):
 
   - fixed new item addition in Cash Receipt Edit (alec)
+  - removed doubled function CustomerGroupGetAll() call in print module (alec)
 
 version 1.8.0rc3 Rosha (2005-12-22):
 
